# zen

./: README.md  pyproject.toml  requirements.txt  setup.py  version.json
.github/workflows/: build.yaml
zen.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
zen/commands/: prs.py  repos.py
zen/main/: zen.py
zen/zen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
