[tool.poetry]
name = "zen-git"
packages = [
    {include = "zen"}
]

version = "0.1.0"
description = "A git CLI utility tool"
authors = ["Dragos Dumitrache <dragos@afterburner.dev>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple"

[tool.poetry.dependencies]
python = "^3.9"
zen-core="0.2.0"
fuzzyfinder = "^2.1.0"
simple-term-menu = "^1.4.1"
fuzzysearch = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
zen = "zen.main.zen:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
